# cpp_cmake_bootstrap

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindLiblo.cmake
data/: sample.csv
include/: CSVParser.h  MyClass.h
liblo/lib/pkgconfig/: liblo.pc
src/: CSVParser.cpp  MyClass.cpp  main.cpp
